--- a/Android/app/src/main/res/layout/regestretionscreen.xml
+++ b/Android/app/src/main/res/layout/regestretionscreen.xml
@@ -5,14 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#121212"
+    android:scrollbarThumbHorizontal="@color/white"
+    android:visibility="visible"
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="320dp"
-        android:layout_height="83dp"
-        android:autoText="false"
-        android:backgroundTint="#121212"
+        android:id="@+id/buttonREG"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:background="#F3F3F3"
+        android:backgroundTint="#2B2A2A"
         android:backgroundTintMode="add"
         android:checkable="true"
         android:clickable="true"
@@ -24,18 +26,19 @@
         app:cornerRadius="90px"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.9"
-        app:strokeColor="#5A5555"
-        android:background="@drawable/my_button_bg"
-        />
+        app:layout_constraintVertical_bias="0.901" />
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="320dp"
-        android:layout_height="83dp"
+        android:id="@+id/buttonIN"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
         android:backgroundTint="#FFFFFF"
+        android:checkable="true"
+        android:clickable="true"
+        android:contextClickable="false"
         android:fontFamily="@font/cormorant_garamond_bold"
         android:singleLine="false"
         android:text="Войти"
@@ -44,8 +47,64 @@
         app:cornerRadius="90px"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7" />
+        app:layout_constraintVertical_bias="0.75" />
+
+    <EditText
+        android:id="@+id/editTextTextEmailAddress"
+        android:layout_width="275dp"
+        android:layout_height="50dp"
+        android:background="#FFFFFF"
+        android:backgroundTint="#FFFFFF"
+        android:ems="10"
+        android:fontFamily="@font/cormorant_garamond_bold"
+        android:hint="Логин"
+        android:inputType="textEmailAddress"
+        android:paddingLeft="40dp"
+        android:textAlignment="textStart"
+        android:textAllCaps="false"
+        android:textColor="#000000"
+        android:textDirection="firstStrongRtl"
+        android:textIsSelectable="false"
+        android:textSize="20sp"
+        android:typeface="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.443" />
+
+    <EditText
+        android:id="@+id/editTextTextPassword"
+        android:layout_width="275dp"
+        android:layout_height="50dp"
+        android:background="#FFFFFF"
+        android:ems="10"
+        android:fontFamily="@font/cormorant_garamond_bold"
+        android:hint="Пароль"
+        android:hyphenationFrequency="normal"
+        android:inputType="textPassword"
+        android:paddingLeft="40dp"
+        android:textAllCaps="false"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.558" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="274dp"
+        android:layout_height="156dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.088"
+        app:srcCompat="@drawable/mirea" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
