Кастомные listview и адаптер

--- a/MyApplication/app/src/main/res/layout/main_window.xml
+++ b/MyApplication/app/src/main/res/layout/main_window.xml
@@ -21,6 +21,8 @@
         android:contextClickable="false"
         android:fontFamily="@font/cormorant_garamond_bold"
         android:onClick="OnClickSave"
+        android:shadowColor="#DFDFE3"
+        android:shadowRadius="1"
         android:singleLine="false"
         android:text="Регистрация"
         android:textColor="#FFFFFF"
@@ -42,6 +44,8 @@
         android:contextClickable="false"
         android:fontFamily="@font/cormorant_garamond_bold"
         android:onClick="SingInClick"
+        android:shadowColor="#121111"
+        android:shadowRadius="1"
         android:singleLine="false"
         android:text="Войти"
         android:textColor="#121212"
