--- a/MyApplication/app/src/main/res/layout/show_layout.xml
+++ b/MyApplication/app/src/main/res/layout/show_layout.xml
@@ -6,11 +6,13 @@
     android:layout_height="match_parent">
 
     <ListView
+        android:background="#121212"
         android:id="@+id/listView_2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="415dp"
+        android:layout_height="734dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
